[gd_scene load_steps=4 format=3 uid="uid://bcs0o14eky13o"]

[ext_resource type="Script" uid="uid://b8vbewxxgdbpl" path="res://ui/time_slider/time_slider.gd" id="1_wovv2"]
[ext_resource type="Texture2D" uid="uid://btm0g4wsbqdm8" path="res://ui/time_slider/assets/time_bar.png" id="2_yao3j"]
[ext_resource type="Texture2D" uid="uid://cyj187uqmc608" path="res://ui/time_slider/assets/moon.png" id="4_lthx1"]

[node name="TimeSlider" type="AspectRatioContainer"]
offset_right = 160.0
offset_bottom = 48.0
script = ExtResource("1_wovv2")

[node name="SkyBG" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_yao3j")

[node name="SkyObject" type="TextureRect" parent="SkyBG"]
unique_name_in_owner = true
layout_mode = 0
offset_top = -6.0
offset_right = 48.0
offset_bottom = 42.0
texture = ExtResource("4_lthx1")
stretch_mode = 2
